--- a/first-project/src/app/app.component.html
+++ b/first-project/src/app/app.component.html
@@ -1,2 +1,2 @@
-<my-first-component></my-first-component>
-<app-my-first2></app-my-first2>
+<my-first-component></my-first-component> <app-my-first2></app-my-first2>
+<app-cursos></app-cursos>
