--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -15,4 +15,57 @@
     <img [src]="urlImagem" />
     <img bind-src="urlImagem" />
   </article>
+
+  <article>
+    <h3>Class e Style binding</h3>
+    <div>Selecione uma Classe</div>
+    <select #classe (change)="(0)">
+      <option value="alert-success">Success</option>
+      <option value="alert-info">Info</option>
+      <option value="alert-warning">Warning</option>
+      <option value="alert-danger">Danger</option>
+    </select>
+    <br /><br />
+
+    <div class="alert {{ classe.value }}" role="alert">
+      Texto colorido conforme o valor do combobox
+    </div>
+
+    <div
+      class="alert"
+      role="alert"
+      [class.alert-success]="classe.value == 'alert-success'"
+    >
+      Success
+    </div>
+    <div
+      class="alert"
+      role="alert"
+      [class.alert-info]="classe.value == 'alert-info'"
+    >
+      Info
+    </div>
+    <div
+      class="alert"
+      role="alert"
+      [class.alert-warning]="classe.value == 'alert-warning'"
+    >
+      Warning
+    </div>
+    <div
+      class="alert"
+      role="alert"
+      [class.alert-danger]="classe.value == 'alert-danger'"
+    >
+      Danger
+    </div>
+
+    <div
+      class="alert alert-danger"
+      role="alert"
+      [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'"
+    >
+      Danger
+    </div>
+  </article>
 </section>
