--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,4 +1,4 @@
-<section class="property-binding">
+<!-- <section class="property-binding">
   <article>
     <h3>Interpolation</h3>
     <p>String renderizada com interpolation: {{ url }}</p>
@@ -66,6 +66,36 @@
       [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'"
     >
       Danger
+    </div>
+  </article>
+</section> -->
+
+<section>
+  <article>
+    <h3>Event Binding</h3>
+    <div>
+      <button class="btn btn-primary" (click)="onClick()">Click me</button>
+      <br /><br />
+
+      <input
+        type="text"
+        (keyup)="onKeyUp($event)"
+        (keyup.enter)="salvarValor($any(campoInput).value)"
+        (blur)="salvarValor($any(campoInput).value)"
+        #campoInput
+      />
+
+      <p>Valor atual: {{ valorAtual }}</p>
+      <p>Valor salvo: {{ valorSalvo }}</p>
+
+      <br />
+
+      <span
+        (mouseover)="onMouseOverOut()"
+        (mouseout)="onMouseOverOut()"
+        [class.highlight]="isMouseOver"
+        >Passe o mouse sobre mim</span
+      >
     </div>
   </article>
 </section>
