feat: two-way data binding

--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -70,7 +70,7 @@
   </article>
 </section> -->
 
-<section>
+<!-- <section>
   <article>
     <h3>Event Binding</h3>
     <div>
@@ -98,4 +98,6 @@
       >
     </div>
   </article>
-</section>
+</section> -->
+
+<app-my-form></app-my-form>
