feat: input properties

--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -100,4 +100,14 @@
   </article>
 </section> -->
 
-<app-my-form></app-my-form>
+<!-- <app-my-form></app-my-form> -->
+
+<section class="input-output-properties">
+  <article>
+    <h3>Input/Output Properties</h3>
+
+    <app-curso [nome]="nomeDoCurso"></app-curso>
+  </article>
+</section>
+
+<app-curso></app-curso>
